--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     ext.lifecycle_version = "2.3.1"
     ext.navigation_version = "2.3.5"
     ext.hilt_version = "2.37"
+    ext.room_version = "2.3.0"
     ext.navigation_version = "2.3.5"
 
     ext.kotlin_version = "1.5.20"
